@startuml mcd

note "Tous les attributs sont NOT NULL" as note

class Organisation{
  <primary> Siren : int
  nom : str
  logo : str
}

class Type_Organisation{
  <primary> name : str
}

class Offre_emploi {
  <primary> num : int
  date_validite : datetime
  indications : str
  date_depot : datetime
}

class etat_offre{
  <primary> etat : str
}

class Etat_demande {
  <primary> demande : str
}

class fiche_poste {
  intitule : str
  responsable_hierarchique : str
  rythme_travail : float
  teletravail : bool
  salaire_min : float
  salaire_max : float
  description : text  
}

class statut_poste{
  <primary> statut : str
}

class type_metier{
  <primary> type : str
}

class adresse{
  num : int
  rue : str
  ville : str
  code_postal : str

}

class Utilisateur{
  email : str UNIQUE
  nom : str
  prenom : str
  num_tel : str UNIQUE
  date_creation : datetime
  last_login : datetime
  statut : bool
  password : str (hash)
}

class Administrateur{
  
}

class Recruteur{
  
}

class Candidat{
  
}

class Candidature{
  date_candidature : datetime
}

class Piece_dossier{
  type : str
  fichier : str
}

class Role {
  <primary> role : str
}

Organisation "*" -- "1" Type_Organisation
Organisation "1" --- "*" fiche_poste : "Posséder >"
Organisation "*" -- "1" Etat_demande
Offre_emploi "*" -- "1" etat_offre
fiche_poste "*" -- "1" statut_poste
fiche_poste "*" -- "1" type_metier
fiche_poste "*" -- "1" adresse
Offre_emploi "*" --- "1" fiche_poste : "Correspondre à >"
Administrateur --> Utilisateur
Recruteur --> Candidat
Candidat ---> Utilisateur
Candidature "1" -- "*" Piece_dossier
Candidature "*" -- "1" Offre_emploi : "Porter sur >"
Candidat "1" -- "*" Candidature : "Modifier >"
Recruteur "*" -- "1" Organisation : "Travailler pour >"
Organisation "*" -- "1" adresse : "Se situer >"
Recruteur "*" -- "1" Etat_demande
Utilisateur "*" -- "1" Role


@enduml
